[package]
name = "dux"
description = "Calculate disk space used by a folder"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mustakimali/dux"

[profile.release]
lto = true

[dependencies]
pretty-bytes = "0.2.2"
crossbeam-channel = "0.5.1"
num_cpus = "1.13.0"
min-max-heap = "1.3.0"
clap = "3.0.0-beta.5"