[package]
name = "dux"
description = "Calculate disk space used by a folder"
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mustakimali/dux"


[dependencies]
pretty-bytes = "0.2"
crossbeam-channel = "0.5"
num_cpus = "1"
min-max-heap = "1"
clap = { version = "3", features = ["derive"] }
cli-table = "0.4"

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
panic = "abort"
