[package]
name = "duxx"
description = "Calculate disk space used by a folder"
version = "0.2.6"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mustakimali/dux"

[[bin]]
name = "dux"
path = "src/main.rs"

[dependencies]
pretty-bytes = "0.2"
crossbeam-channel = "0.5"
num_cpus = "1"
clap = { version = "4", features = ["derive"] }
cli-table = "0.4"
thousands = "0.2.0"

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
panic = "abort"
